API key in .env.production

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
 #NEXT URL for production environment
 NEXT_PUBLIC_STRAPI_API_URL='https://api.mizoapologia.org'
+
+#Sendgrid
+SENDGRID_API_KEY='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'
