updated Next to v12 and changed API key for SendGrid, also added CORS

--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 NEXT_PUBLIC_STRAPI_API_URL='https://api.mizoapologia.org'
 
 #Sendgrid
-SENDGRID_API_KEY='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'
+SENDGRID_API_KEY='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'
