--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.5",
+    "cors": "^2.8.5",
     "moment": "^2.29.1",
-    "next": "^11.0.1",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
