--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "next",
   "rules": {
-    "react/no-children-prop": "off"
+    "react/no-children-prop": "off",
+    "@next/next/no-document-import-in-page": "off"
   }
 }
