--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^6.0.2",
     "react-moment": "^1.1.3",
+    "react-pagination": "^1.0.0",
     "rehype-raw": "^5.1.0",
     "rehype-sanitize": "^4.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.30.0",
-    "eslint-config-next": "^13.1.6"
+    "eslint-config-next": "^13.1.6",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
