--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swr": "^2.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "eslint": "^7.30.0",
     "eslint-config-next": "^13.1.6",
