--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-moment": "^1.1.3",
     "react-pagination": "^1.0.0",
     "rehype-raw": "^5.1.0",
-    "rehype-sanitize": "^4.0.0",
-    "swr": "^2.0.3"
+    "rehype-sanitize": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
