--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
+    "daisyui": "^2.51.3",
     "moment": "^2.29.3",
     "next": "^13.1.6",
     "qs": "^6.11.0",
